added exception tests four our mapperservices